--- a/style.css
+++ b/style.css
@@ -1,26 +1,60 @@
 body{
     text-align:center; 
-    background-color: aquamarine;
+    background-color:antiquewhite;
     margin:0px;
-    padding-top:800px;
 }
 #Tim{
     width:175px;
     margin-bottom: 50px;
     border-radius: 50%;
+    margin-top: 100px;
+    border:solid 2px;
 }
 #welcome{
-    position:absolute;
     overflow: hidden;
     height: 800px;
     color: azure;
-    left:0;
-    top:0;
-    bottom:0;
-    right:0;
     opacity:0.83;
     background:linear-gradient(#b0cdf5 0% , #b700ff 100%); 
     display:table;
     width:100%;
     height:100%;
+}
+.menu{
+    list-style: none;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+    z-index: 10;
+}
+.item{
+    float: left;
+    padding-right:9px;
+    padding-left: 9px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-family: serif;
+    font-size: 20px;
+    }
+.item:hover{
+    font-size:25px;
+}
+.line{
+    background-color: darkslateblue;
+    width:150px;
+    height:7px;
+    margin:auto;
+}
+#bio{
+    padding:50px;
+}
+p{
+    max-width: 450px;
+    margin:25px auto;
+    font-size:17px;
+    line-height: 1.3;
+    
+    
+    
 }
